# pyshop

./: .env.example  .gitignore  LICENSE  Makefile  README.md  backup_db.sqlite3  data.json  db.sqlite3  dump_sqlite_to_json.py  electronics_products.csv  footwears.csv  groceries_products.csv  laptops.csv  performance_check.py  products.csv  products.json  pyproject.toml  render.yml  requirements.txt  update_product_images.py
products/: __init__.py  admin.py  admin_interface.py  apps.py  export_products.py  forms.py  models.py  urls.py  views.py  views_site.py
products/migrations/: 0001_initial.py  0002_offer.py  0003_rename_products_product.py  0004_auto_20250620_1034.py  0005_auto_20250620_1612.py  0006_product_subcategory.py  0007_alter_offer_id_alter_product_id.py  0008_profile.py  0009_alter_product_stock.py  0010_alter_offer_options_alter_product_options_and_more.py  0011_profile_address_profile_city_profile_country_and_more.py
products/static/products/: estatemlm | Adelodunpeter25's Org | Supabase.html
products/templates/: add_product.html  admin_dashboard.html  base.html  cart.html  checkout.html  edit_profile.html  footwears.html  index.html  landing.html  login.html  order_detail.html  order_history.html  payment.html  product_detail.html  profile.html  register.html  update_site_name.html  view_profile.html
products/views/: __init__.py  auth_views.py  cart_views.py  order_views.py  product_views.py  profile_views.py
pyshop/: settings.py  urls.py
