[project]
name = "pyshop"
version = "1.0.0"
description = "Django E-commerce Website"
requires-python = ">=3.9"
dependencies = [
    "django>=4.2,<5.0",
    "django-widget-tweaks==1.5.0",
    "pillow==11.2.1",
    "gunicorn==23.0.0",
    "whitenoise==6.9.0",
    "dj-database-url==3.0.0",
    "django-jazzmin>=3.0.1",
]

[project.optional-dependencies]
production = [
    "psycopg2-binary==2.9.10",
]

[project.scripts]
server = "manage:main"

[tool.uv]
dev-dependencies = []
